# max-sdk-base

./: .gitignore  CMakeLists.txt  README.md
c74support/: c74_jitter.h  c74_max.h  c74_msp.h
c74support/max-includes/: ext_byteorder.h  ext_common.h  ext_prefix.h  ext_preprocessor.h  ext_strings.h
c74support/max-includes/common/: jpatcher_syms.c
script/: add_max_target.cmake  c74_add_max_target.cmake  macros.cmake  max-linker-flags.txt  max-package.cmake  max-posttarget.cmake  max-pretarget.cmake
